<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back"
                android:paddingTop="40dp"
                android:paddingStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:src="@drawable/arrow" />

            <ImageView
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:layout_marginStart="55dp"
                android:paddingTop="40dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nunitobold"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Form Group -->
        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/email_register"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_edittext"
                android:fontFamily="@font/nunito"
                android:padding="10dp"
                android:textSize="18dp" />

            <!-- Username -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito"
                android:text="@string/nameuser_register"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_edittext"
                android:fontFamily="@font/nunito"
                android:padding="10dp"
                android:textSize="18dp" />

            <!-- Password -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito"
                android:text="@string/passwd_register"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_edittext"
                android:fontFamily="@font/nunito"
                android:padding="10dp"
                android:textSize="18dp"
                android:inputType="textPassword" />

            <!-- Confirm Password -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito"
                android:text="@string/confirmpasswd_register"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/borde_edittext"
                android:fontFamily="@font/nunito"
                android:padding="10dp"
                android:textSize="18dp"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirm"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_personalizado"
                android:text="@string/confirm_register"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>